k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: umltutor
  labels:
    app: umltutor
